# ls_monitor

./: Area.ini  CMakeLists.txt  Makefile  PortMonitor.pro.user.405038c  PortSecurity.pro  PortSecurity.pro.user.405038c  PortSecurity.pro.user.5b11618  PortSecurity.pro.user.71a921f  README.en.md  README.md  common.h  device.ini  filesystem.cpp  filesystem.h  image.qrc  main.cpp  maindeal.cpp  maindeal.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  my_paramss.json  onlyUi.pro
ALARMLED/: alarmled.pri
ALARMLED/include/: LED_RS232_API.h  LED_serverAPI.h
ALARMLED/src/: LED_serverAPI.cpp
ALGORITHM/ROIPointsFile/: GroundROIPoints.txt  ShipROIPoints.txt
ALGORITHM/UtilMethod/: PlaneMethod.cpp  RTMethod.cpp  Util.cpp  Util.h  VoxelGrid.cpp
ALGORITHM/include/: algorithm.h  algorithm_interface.h
ALGORITHM/material_cloud/: 1669258883948379.pcd  1669258884049313.pcd  1669258884149116.pcd  1669258884249360.pcd  1669258884350666.pcd  1669258884451103.pcd  1669258884552164.pcd  1669258884653210.pcd  1669258884754079.pcd  1669258884863769.pcd  1669258884955322.pcd  1669258885055793.pcd  1669258885157091.pcd  1669258885263805.pcd  1669258885358114.pcd  1669258885459532.pcd  1669258885560387.pcd  1669258885660797.pcd  1669258885762433.pcd  1669258885862736.pcd  1669258885963281.pcd
ALGORITHM/ship_cloud/: 1669079177663500.pcd  1669079177755195.pcd  1669079177856105.pcd  1669079177957162.pcd  1669079178057932.pcd  1669079178160155.pcd  1669079178259958.pcd  1669079178359928.pcd  1669079178461205.pcd  1669079178562189.pcd  1669079178662877.pcd  1669079178763859.pcd  1669079178863995.pcd  1669079178965290.pcd  1669079179065700.pcd  1669079179166627.pcd  1669079179271818.pcd  1669079179367959.pcd  1669079179469296.pcd  1669079179570137.pcd  1669079179670474.pcd  1669079179771857.pcd  1669079179872264.pcd  1669079179973683.pcd  1669079180074296.pcd  1669079180174551.pcd  1669079180278598.pcd  1669079180376179.pcd  1669079180476862.pcd  1669079180578432.pcd  1669079180679272.pcd  1669079180780178.pcd  1669079180880762.pcd  1669079180981487.pcd  1669079181082174.pcd  1669079181182843.pcd  1669079181283483.pcd  1669079181395154.pcd
ALGORITHM/src/: GroundMaterialDetection.cpp  ShipDetection.cpp  algorithm.cpp  algorithm_interface.cpp
COMMUNICATION/IMU/: CMakeLists.txt  LPMSIG1.cpp  LPMSIG1.h  TCPClient.cpp  TCPClient.h  TCPStruct.h
COMMUNICATION/POMS/: usb.cpp  usb.h
COMMUNICATION/include/: chat_interface.h  chat_plc.h  communication_interface.h
COMMUNICATION/src/: chat_interface.cpp  chat_plc.cpp  communication_interface.cpp
DRIVER/CAMERA/include/: camera_drive_interface.h  cffmpegInterface.h  ptz.h
DRIVER/CAMERA/src/: camera_drive_interface.cpp  cffmpegInterface.cpp  ptz.cpp
DRIVER/POINTCLOUD/include/: lidar_drive_interface.h  lidardrive128s1.h
DRIVER/POINTCLOUD/src/: lidar_drive_interface.cpp  lidardrive128s1.cpp
GENERALTOOL/: generaltool.pri
GENERALTOOL/src/: LED_RS232_API.cpp
LOG/include/: my_log.h
LOG/src/: my_log.cpp
MONITOR/: monitor.pri
MONITOR/include/: algonrithm.h  common_struct.h  getlidarc16.h  getlidarch128x1.h  grid_height_diference.hpp  grid_height_difference.h  lidarclustem.h  lidarroaddetect.h  ptz.h
MONITOR/src/: algonrithm.cpp  getlidarc16.cpp  getlidarch128x1.cpp  grid_height_difference.cpp  lidarclustem.cpp  lidarroaddetect.cpp  ptz.cpp
MSGSERIVE/: filehanddle.cpp  myparams.h  paramsevent.hpp
PROTOCOL/include/: poms.hpp  protocol.hpp
SDK/: sdk.pri
SDK/HCInclude/incEn/: HCNetSDK.h
SDK/include/: AliSmsAPIClient.h
SDK/src/: AliSmsAPIClient.cpp
UI/: ui.pri
UI/forms/: aboutdialog.ui  addlidar.ui  alarm.ui  diary.ui  setroi.ui  smsdialog.ui
UI/include/: addlidar.h  alarm.h  cameraviewer.h  common.h  diary.h  mainwindow.h  paintarea.h  setroi.h
UI/resource/: images.qrc
UI/src/: addlidar.cpp  alarm.cpp  cameraviewer.cpp  diary.cpp  mainwindow.cpp  paintarea.cpp  setroi.cpp  smsdialog.cpp
Utility/: my_Util.cpp  my_Util.h
include/: maindeal.h
other/: image.qrc  images.qrc
src/: main.cpp  maindeal.cpp
temp/moc/: moc_aboutdialog.cpp  moc_addlidar.cpp  moc_algonrithm.cpp  moc_childtitlebar.cpp  moc_getlidarc16.cpp  moc_getlidarch128x1.cpp  moc_imageWidget.cpp  moc_lidarclustem.cpp  moc_maindeal.cpp  moc_maintitlebar.cpp  moc_mainwindow.cpp  moc_paintarea.cpp  moc_ptz.cpp  moc_setroi.cpp  moc_smsdialog.cpp  moc_titlebar.cpp
temp/rcc/: qrc_image.cpp  qrc_images.cpp
temp/ui/: ui_aboutdialog.h  ui_addlidar.h  ui_addpolygon.h  ui_childtitlebar.h  ui_maintitlebar.h  ui_mainwindow.h  ui_setroi.h  ui_smsdialog.h
